tests/missing-type.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected an ID for the type of this node.

x:
